<resources>
    <string name="app_name">Waker Upper</string>

    <!-- Text -->
    <string name="text_watch_title">Text Watch</string>
    <string name="text_watch_description_pre">Sounds will be enabled after receiving </string>
    <string name="text_watch_description_post"> texts and not responding.</string>
    <string name="call_watch_title">Call Watch</string>
    <string name="call_watch_description">Sounds will be enabled when receiving a call.</string>
    <string name="enable_button">Turn On</string>
    <string name="disable_button">Turn Off</string>

    <!-- Shared Preferences -->
    <string name="update_text_service_key">com.attila.wakerupper.update_text_amount</string>
    <string name="reset_text_service_key">com.attila.wakerupper.reset_text_amount</string>
    <string name="text_amount_service_key">text_amount</string>
    <string name="text_received_service_key">text_received</string>
    <string name="shared_prefs_file_name">com.attila.wakerupper.sharedprefs</string>
    <string name="text_amount_default_key">3</string>
    <string name="call_watch_enabled_service_key">call_watch_enabled_toggle_button</string>
    <string name="text_watch_enabled_service_key">text_watch_enabled_toggle_button</string>
    <string name="last_id_text_sent">last_id_text_sent</string>

</resources>
